syntax = "proto3";

package example2;

option java_package = "rpc2";
option java_multiple_files = true;
option java_outer_classname = "Rpc";

option go_package = "github.com/ngyewch/twirp-playground/rpc2";

message ToUpperRequest {
    string text = 1;
}

message ToUpperResponse {
    string text = 1;
}
